# energy_hackathon

./: README.md  main.ipynb  main.py  pyproject.toml  requirements.txt
data/2023/: Ancillary Volumes & Prices (4H).csv  Day-Ahead Price (1H).csv
data/2024/: Ancillary Volumes & Prices (4H).csv  Prices & Forecasts (HH).csv
data/processed/model A/: y.csv
data/processed/model B/: X.csv  merged_dataset_B.csv  y.csv
data/raw/2023/: Prices & Forecasts (HH).csv
data/raw/2024/: Day-Ahead Price (1H).csv
helper/: eda.py  feature_engineering.py  modelling.py  utils.py
