[project]
name = "energy-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[tool.uv.sources]
requests = { git = "https://github.com/psf/requests" }
